--- a/pages/translator.html
+++ b/pages/translator.html
@@ -1,11 +1,11 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="utf-8">
 		<title>Keyboard Layout Converter</title>
-		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="/css/translator.css">
 		<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
-		<script type="text/javascript" src="script.js"></script>
+		<script type="text/javascript" src="/js/translator.js"></script>
 	</head>
 	<body>
 		<div id="top-bar">
@@ -31,13 +31,3 @@
 		</div>
 	</body>
 </html>
- -->
-
- <!DOCTYPE html>
- <head>
- 	<title>Base page</title>
- </head>
- <body>
- 	<a href="/pages/translator.html">Translator App</a>
- </body>
- </html>
