Changed links path to relative

--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <head>
 	<title>Base page</title>
+	<link rel="stylesheet" type="text/css" href="./css/home.css">
+	<link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet">
 </head>
 <body>
-	<a href="/translator">Translator App</a>
+	<a href="./translator">
+		<div class="cool-link">
+			<span class="cool-image">
+				<img src="./images/translator.jpg" height="30px" width="30px" alt="translator.jpg" />
+			</span>
+			<span class="cool-description">
+				Translator
+			</span>
+		</div>
+	</a>
 </body>
 </html>
