--- a/translator/index.html
+++ b/translator/index.html
@@ -3,9 +3,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="utf-8">
 		<title>Keyboard Layout Converter</title>
-		<link rel="stylesheet" href="/css/translator.css">
+		<link rel="stylesheet" href="../css/translator.css">
 		<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
-		<script type="text/javascript" src="/js/translator.js"></script>
+		<script type="text/javascript" src="../js/translator.js"></script>
 	</head>
 	<body>
 		<div id="top-bar">
