Added top bar in home page

--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 	<title>Base page</title>
 	<link rel="stylesheet" type="text/css" href="./css/home.css">
 	<link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 </head>
 <body>
+	<div class="top-bar">
+		Hope is a good thing
+	</div>
 	<a href="./translator">
 		<div class="cool-link">
-			<span class="cool-image">
-				<img src="./images/translator.jpg" height="30px" width="30px" alt="translator.jpg" />
-			</span>
-			<span class="cool-description">
-				Translator
-			</span>
+			<img src="./images/translator.jpg" height="30px" width="30px" alt="translator.jpg" />
+			Translator
 		</div>
 	</a>
 </body>
