Added bootstrap and jQuery support

--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <head>
 	<title>Base page</title>
-	<link rel="stylesheet" type="text/css" href="./css/home.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="./css/home.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
 	<div class="top-bar">
-		Hope is a good thing
+		You come here to have fun
 	</div>
 	<a href="./translator">
 		<div class="cool-link">
-			<img src="./images/translator.jpg" height="30px" width="30px" alt="translator.jpg" />
-			Translator
+			<img class="img-rounded" src="./images/translator.jpg" height="30px" width="30px" alt="translator.jpg" />
+			<div class="just-fit">Qwerty &#8644; Dvorak Converter</div>
 		</div>
 	</a>
 </body>
