--- a/translator/index.html
+++ b/translator/index.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
-	<head>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta charset="utf-8">
-		<title>Keyboard Layout Converter</title>
-		<link rel="stylesheet" href="../css/translator.css">
-		<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
-		<script type="text/javascript" src="../js/translator.js"></script>
-	</head>
-	<body>
-		<div id="top-bar">
-			Translate
-			<span class="blue">Q</span><span class="red">w</span><span class="yellow">e</span><span class="blue">r</span><span class="green">t</span><span class="red">y</span>
-			to
-			<span class="blue">D</span><span class="red">v</span><span class="yellow">o</span><span class="blue">r</span><span class="green">a</span><span class="red">k</span>
-			and back
-		</div>
-		<div id="container">
-			<center>
-				<div>
-					<textarea id="input" rows="10" type="text" name="query-string"></textarea>
-				</div>
-				<div>
-					<button id="to-dvorak">Translate to Dvorak</button>
-					<button id="to-qwerty">Translate to Qwerty</button> 
-				</div>
-			</center>
-		</div>
-		<div class="custom-footer">
-			Copyright © NeverSayDie
-		</div>
-	</body>
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="utf-8">
+	<title>Keyboard Layout Converter</title>
+	<link rel="stylesheet" href="../css/translator.css">
+	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<script type="text/javascript" src="../js/translator.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body>
+	<div id="top-bar">
+		Translate
+		<span class="blue">Q</span><span class="red">w</span><span class="yellow">e</span><span class="blue">r</span><span class="green">t</span><span class="red">y</span>
+		to
+		<span class="blue">D</span><span class="red">v</span><span class="yellow">o</span><span class="blue">r</span><span class="green">a</span><span class="red">k</span>
+		and back
+	</div>
+	<div id="container">
+		<center>
+			<div>
+				<textarea id="input" rows="10" type="text" name="query-string"></textarea>
+			</div>
+			<div>
+				<button id="to-dvorak">Translate to Dvorak</button>
+				<button id="to-qwerty">Translate to Qwerty</button> 
+			</div>
+		</center>
+	</div>
+	<div class="custom-footer">
+		Copyright © NeverSayDie
+	</div>
+</body>
 </html>
