Added new styles

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<title>Base page</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="./css/home.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -11,12 +11,12 @@
 </head>
 <body>
 	<div class="top-bar">
-		You come here to have fun
+		You're here to have fun
 	</div>
 	<a href="./translator">
-		<div class="cool-link">
-			<img class="img-rounded" src="./images/translator.jpg" height="30px" width="30px" alt="translator.jpg" />
-			<div class="just-fit">Qwerty &#8644; Dvorak Converter</div>
+		<div class="cool-link" id="translator">
+			<img class="img-rounded" src="./images/translator-icon.jpg" height="30px" width="30px" alt="translator.jpg" />
+			Qwerty &#8644; Dvorak Converter
 		</div>
 	</a>
 </body>
