--- a/translator/index.html
+++ b/translator/index.html
@@ -11,7 +11,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<div id="top-bar">
+	<div class="top-bar">
 		Translate
 		<span class="blue">Q</span><span class="red">w</span><span class="yellow">e</span><span class="blue">r</span><span class="green">t</span><span class="red">y</span>
 		to
