Increased box size

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 	</div>
 	<a href="./translator">
 		<div class="cool-link" id="translator">
-			<img class="img-rounded" src="./images/translator-icon.jpg" height="30px" width="30px" alt="translator.jpg" />
+			<!-- <img class="img-rounded" src="./images/translator-icon.jpg" height="30px" width="30px" alt="translator.jpg" /> -->
+			Qwerty &#8644; Dvorak Converter
+		</div>
+		<div class="cool-link" id="translator">
+			<!-- <img class="img-rounded" src="./images/translator-icon.jpg" height="30px" width="30px" alt="translator.jpg" /> -->
 			Qwerty &#8644; Dvorak Converter
 		</div>
 	</a>
