--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <head>
-	<title>Welcome to the Fun World</title>
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Welcome to the Fun World</title>
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="./css/home.css">
@@ -18,9 +19,11 @@
 			<!-- <img class="img-rounded" src="./images/translator-icon.jpg" height="30px" width="30px" alt="translator.jpg" /> -->
 			Qwerty &#8644; Dvorak Converter
 		</div>
-		<div class="cool-link" id="translator">
-			<!-- <img class="img-rounded" src="./images/translator-icon.jpg" height="30px" width="30px" alt="translator.jpg" /> -->
-			Qwerty &#8644; Dvorak Converter
+	</a>
+	<a href="./sudoku-solver">
+		<div class="cool-link" id="sudoku-solver">
+			<!-- <img class="img-rounded" src="./images/sudoku-solver-icon.jpg" height="30px" width="30px" alt="translator.jpg" /> -->
+			Sudoku Solver
 		</div>
 	</a>
 </body>
