--- a/translator/index.html
+++ b/translator/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Keyboard Layout Converter</title>
+	<link rel="shortcut icon" type="image/jpg" href="../images/translator-icon.jpg">
 	<link rel="stylesheet" href="../css/translator.css">
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
