Added sudoku UI

--- a/sudoku-solver/index.html
+++ b/sudoku-solver/index.html
@@ -15,5 +15,269 @@
 	<div class="top-bar">
 		Solve Any Sudoku Puzzle
 	</div>
+	<div id="puzzle-grid" class="container">
+		<div class="row">
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col dark">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+			<div class="col light">
+				<input type="text">
+			</div>
+		</div>
+	</div>
+	<button id="solve-button">Solve</button>
 </body>
 </html>
