Added footer to all pages

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
+<html>
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Welcome to the Fun World</title>
+	<title>The Dark World</title>
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="./css/home.css">
@@ -12,19 +13,24 @@
 </head>
 <body>
 	<div class="top-bar">
-		You're here to have fun
+		The Dark World
 	</div>
-	<a href="./translator">
-		<div class="cool-link" id="translator">
-			<!-- <img class="img-rounded" src="./images/translator-icon.jpg" height="30px" width="30px" alt="translator.jpg" /> -->
-			Qwerty &#8644; Dvorak Converter
-		</div>
-	</a>
-	<a href="./sudoku-solver">
-		<div class="cool-link" id="sudoku-solver">
-			<!-- <img class="img-rounded" src="./images/sudoku-solver-icon.jpg" height="30px" width="30px" alt="translator.jpg" /> -->
-			Sudoku Solver
-		</div>
-	</a>
+	<div id="app-content">
+		<a href="./translator">
+			<div class="cool-link" id="translator">
+				<!-- <img class="img-rounded" src="./images/translator-icon.jpg" height="30px" width="30px" alt="translator.jpg" /> -->
+				Qwerty &#8644; Dvorak Converter
+			</div>
+		</a>
+		<a href="./sudoku-solver">
+			<div class="cool-link" id="sudoku-solver">
+				<!-- <img class="img-rounded" src="./images/sudoku-solver-icon.jpg" height="30px" width="30px" alt="translator.jpg" /> -->
+				Sudoku Solver
+			</div>
+		</a>
+	</div>
+	<div class="custom-footer">
+		Copyright © NeverSayDie
+	</div>
 </body>
 </html>
