Changed image dimensions

--- a/index.html
+++ b/index.html
@@ -16,18 +16,21 @@
 		The Dark World
 	</div>
 	<div id="app-content">
-		<a href="./translator">
-			<div class="cool-link" id="translator">
-				<!-- <img class="img-rounded" src="./images/translator-icon.jpg" height="30px" width="30px" alt="translator.jpg" /> -->
+		<div class="cool-link" id="translator">
+			<a class="block-anchor-tag" href="./translator">
 				Qwerty &#8644; Dvorak Converter
-			</div>
-		</a>
-		<a href="./sudoku-solver">
-			<div class="cool-link" id="sudoku-solver">
-				<!-- <img class="img-rounded" src="./images/sudoku-solver-icon.jpg" height="30px" width="30px" alt="translator.jpg" /> -->
-				Sudoku Solver
-			</div>
-		</a>
+			</a>
+		</div>
+		<div class="cool-link" id="sudoku-solver">
+			<a class="block-anchor-tag" href="./sudoku-solver">
+				Sudoku Solver	
+			</a>
+		</div>
+		<div class="cool-link" id="translator">
+			<a class="block-anchor-tag" href="./translator">
+				Qwerty &#8644; Dvorak Converter
+			</a>
+		</div>
 	</div>
 	<div class="custom-footer">
 		Copyright © NeverSayDie
