--- a/translator/index.html
+++ b/translator/index.html
@@ -4,11 +4,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Keyboard Layout Converter</title>
-	<link rel="shortcut icon" type="image/jpg" href="../images/translator-icon.jpg">
-	<link rel="stylesheet" href="../css/translator.css">
+	<link rel="shortcut icon" type="image/jpg" href="images/translator-icon.jpg">
+	<link rel="stylesheet" href="css/translator.css">
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<script type="text/javascript" src="../js/translator.js"></script>
+	<script type="text/javascript" src="js/translator.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
