Added page responsiveness

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/home.js"></script>
 </head>
 <body>
 	<div class="top-bar">
 		The Dark World
 	</div>
-	<div id="app-content">
+	<div id="app-container">
 		<div class="cool-link" id="translator">
 			<a class="block-anchor-tag" href="./translator">
 				Qwerty &#8644; Dvorak Converter
@@ -32,8 +33,8 @@
 			</a>
 		</div>
 	</div>
-	<div class="custom-footer">
+	<!-- <div class="custom-footer">
 		Copyright © NeverSayDie
-	</div>
+	</div> -->
 </body>
 </html>
