--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>The Dark World</title>
-	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+	<link rel="shortcut icon" type="image/jpg" href="images/home-icon.jpg">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="./css/home.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -16,7 +17,7 @@
 	<div class="top-bar">
 		The Dark World
 	</div>
-	<div id="app-container">
+	<div id="container">
 		<div class="cool-link" id="translator">
 			<a class="block-anchor-tag" href="./translator">
 				Qwerty &#8644; Dvorak Converter
@@ -25,6 +26,26 @@
 		<div class="cool-link" id="sudoku-solver">
 			<a class="block-anchor-tag" href="./sudoku-solver">
 				Sudoku Solver	
+			</a>
+		</div>
+		<div class="cool-link" id="translator">
+			<a class="block-anchor-tag" href="./translator">
+				Qwerty &#8644; Dvorak Converter
+			</a>
+		</div>
+		<div class="cool-link" id="translator">
+			<a class="block-anchor-tag" href="./translator">
+				Qwerty &#8644; Dvorak Converter
+			</a>
+		</div>
+		<div class="cool-link" id="translator">
+			<a class="block-anchor-tag" href="./translator">
+				Qwerty &#8644; Dvorak Converter
+			</a>
+		</div>
+		<div class="cool-link" id="translator">
+			<a class="block-anchor-tag" href="./translator">
+				Qwerty &#8644; Dvorak Converter
 			</a>
 		</div>
 		<div class="cool-link" id="translator">
