Added coming soon

--- a/index.html
+++ b/index.html
@@ -28,29 +28,34 @@
 				Sudoku Solver	
 			</a>
 		</div>
-		<div class="cool-link" id="translator">
-			<a class="block-anchor-tag" href="./translator">
-				Qwerty &#8644; Dvorak Converter
+		<div class="cool-link coming-soon">
+			<a class="block-anchor-tag" href="#">
+				Coming Soon...
 			</a>
 		</div>
-		<div class="cool-link" id="translator">
-			<a class="block-anchor-tag" href="./translator">
-				Qwerty &#8644; Dvorak Converter
+		<div class="cool-link coming-soon">
+			<a class="block-anchor-tag" href="#">
+				Coming Soon...
 			</a>
 		</div>
-		<div class="cool-link" id="translator">
-			<a class="block-anchor-tag" href="./translator">
-				Qwerty &#8644; Dvorak Converter
+		<div class="cool-link coming-soon">
+			<a class="block-anchor-tag" href="#">
+				Coming Soon...
 			</a>
 		</div>
-		<div class="cool-link" id="translator">
-			<a class="block-anchor-tag" href="./translator">
-				Qwerty &#8644; Dvorak Converter
+		<div class="cool-link coming-soon">
+			<a class="block-anchor-tag" href="#">
+				Coming Soon...
 			</a>
 		</div>
-		<div class="cool-link" id="translator">
-			<a class="block-anchor-tag" href="./translator">
-				Qwerty &#8644; Dvorak Converter
+		<div class="cool-link coming-soon">
+			<a class="block-anchor-tag" href="#">
+				Coming Soon...
+			</a>
+		</div>
+		<div class="cool-link coming-soon">
+			<a class="block-anchor-tag" href="#">
+				Coming Soon...
 			</a>
 		</div>
 	</div>
