Removed link from coming soon

--- a/index.html
+++ b/index.html
@@ -29,32 +29,32 @@
 			</a>
 		</div>
 		<div class="cool-link coming-soon">
-			<a class="block-anchor-tag" href="#">
+			<a class="block-anchor-tag">
 				Coming Soon...
 			</a>
 		</div>
 		<div class="cool-link coming-soon">
-			<a class="block-anchor-tag" href="#">
+			<a class="block-anchor-tag">
 				Coming Soon...
 			</a>
 		</div>
 		<div class="cool-link coming-soon">
-			<a class="block-anchor-tag" href="#">
+			<a class="block-anchor-tag">
 				Coming Soon...
 			</a>
 		</div>
 		<div class="cool-link coming-soon">
-			<a class="block-anchor-tag" href="#">
+			<a class="block-anchor-tag">
 				Coming Soon...
 			</a>
 		</div>
 		<div class="cool-link coming-soon">
-			<a class="block-anchor-tag" href="#">
+			<a class="block-anchor-tag">
 				Coming Soon...
 			</a>
 		</div>
 		<div class="cool-link coming-soon">
-			<a class="block-anchor-tag" href="#">
+			<a class="block-anchor-tag">
 				Coming Soon...
 			</a>
 		</div>
